instagram added to footer
fa-instagram

--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
             <a href="https://twitter.com/serkanokur" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
             <a href="https://www.linkedin.com/in/serkan-okur-97623728/" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
             <a href="https://www.facebook.com/okurserkan" target="_blank"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/serkan_okur/" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
         </div>
 
         <p><i class="fa fa-copyright" aria-hidden="true"></i> 2018 by Serkan Okur</p>
