--- a/index.html
+++ b/index.html
@@ -129,7 +129,19 @@
           <div class="content-wrap">
             <h2>Certificates</h2>
 
-            <!-- Certificate: 1 -->
+            <!-- Certificate: 12 -->
+            <div class="col-leftC">
+                <h4 class="cert_h4">CSS Essential Training 3</h4>
+              </div>
+              <div class="col-midC">
+              <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
+              </div>
+              <div class="col-rightC">
+              <p>Nov 2018</p>
+            </div>
+      <hr>
+
+            <!-- Certificate: 11 -->
             <div class="col-leftC">
                 <h4 class="cert_h4">CSS Essential Training 2</h4>
               </div>
@@ -140,7 +152,7 @@
               <p>Nov 2018</p>
             </div>
 <hr>
-            <!-- Certificate: 2 -->
+            <!-- Certificate: 10 -->
             <div class="col-leftC">
                 <h4 class="cert_h4">CSS Essential Training 1</h4>
             </div>
@@ -151,7 +163,7 @@
                 <p>Nov 2018</p>
             </div>
 <hr>
-            <!-- Certificate: 3 -->
+            <!-- Certificate: 9 -->
             <div class="col-leftC">
                 <h4 class="cert_h4">Programming Foundations: Fundamentals</h4>
             </div>
@@ -162,7 +174,7 @@
                 <p>Sept 2018</p>
             </div>
 <hr>
-            <!-- Certificate: 4 -->
+            <!-- Certificate: 8 -->
             <div class="col-leftC">
                 <h4 class="cert_h4">Web Development Foundations: Full-Stack vs Front-End</h4>
             </div>
@@ -173,7 +185,7 @@
                 <p>Sept 2018</p>
             </div>
 <hr>
-            <!-- Certificate: 5 -->
+            <!-- Certificate: 7 -->
             <div class="col-leftC">
                 <h4 class="cert_h4">Gamification of Learning</h4>
             </div>
@@ -195,7 +207,7 @@
                 <p>Mar 2018</p>
             </div>
 <hr>
-            <!-- Certificate: 7 -->
+            <!-- Certificate: 5 -->
             <div class="col-leftC">
                 <h4 class="cert_h4">Learning Articulate Storyline 360</h4>
             </div>
@@ -206,7 +218,7 @@
                 <p>Mar 2018</p>
             </div>
 <hr>
-            <!-- Certificate: 8 -->
+            <!-- Certificate: 4 -->
             <div class="col-leftC">
                 <h4 class="cert_h4">UX Design: 1 Overview</h4>
             </div>
@@ -217,7 +229,7 @@
                 <p>Mar 2018</p>
             </div>
 <hr>
-            <!-- Certificate: 8 -->
+            <!-- Certificate: 3 -->
             <div class="col-leftC">
                 <h4 class="cert_h4">Professional Scrum Master I</h4>
             </div>
@@ -228,7 +240,7 @@
                 <p>Feb 2018</p>
             </div>
 <hr>
-            <!-- Certificate: 9 -->
+            <!-- Certificate: 2 -->
             <div class="col-leftC">
                 <h4 class="cert_h4">Scrum Awareness</h4>
             </div>
@@ -239,7 +251,7 @@
                 <p>Feb 2018</p>
             </div>
 <hr>
-            <!-- Certificate: 10 -->
+            <!-- Certificate: 1 -->
             <div class="col-leftC">
                 <h4 class="cert_h4">Manager as Coach</h4>
             </div>
