updates the Certificates

--- a/index.html
+++ b/index.html
@@ -124,13 +124,14 @@
             </div> <!-- close content-wrap div -->
         </section>
 
-        <!-- // Education -->
+        <!-- // Certificates -->
         <section class="certificate" id="certificates">
           <div class="content-wrap">
             <h2>Certificates</h2>
 
             <!-- Certificate: 13 -->
-            <div class="col-leftC">
+            <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">Programming Foundations: Databases</h4>
               </div>
               <div class="col-midC">
@@ -138,22 +139,27 @@
               </div>
               <div class="col-rightC">
               <p>Nov 2018</p>
+              </div>
+              <hr>
             </div>
-      <hr>
+
             <!-- Certificate: 12 -->
-            <div class="col-leftC">
+            <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">CSS Essential Training 3</h4>
               </div>
               <div class="col-midC">
-              <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
+                <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
               </div>
               <div class="col-rightC">
-              <p>Nov 2018</p>
+                <p>Nov 2018</p>
+              </div>
+              <hr>
             </div>
-      <hr>
 
-            <!-- Certificate: 11 -->
-            <div class="col-leftC">
+              <!-- Certificate: 11 -->
+            <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">CSS Essential Training 2</h4>
               </div>
               <div class="col-midC">
@@ -161,121 +167,151 @@
               </div>
               <div class="col-rightC">
               <p>Nov 2018</p>
+              </div>
+              <hr>
             </div>
-<hr>
+
             <!-- Certificate: 10 -->
-            <div class="col-leftC">
+            <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">CSS Essential Training 1</h4>
-            </div>
-            <div class="col-midC">
-              <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
-          </div>
-            <div class="col-rightC">
+              </div>
+              <div class="col-midC">
+                <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
+              </div>
+              <div class="col-rightC">
                 <p>Nov 2018</p>
+              </div>
+              <hr>
             </div>
-<hr>
+
             <!-- Certificate: 9 -->
-            <div class="col-leftC">
+            <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">Programming Foundations: Fundamentals</h4>
-            </div>
-            <div class="col-midC">
-              <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
-          </div>
-            <div class="col-rightC">
+              </div>
+              <div class="col-midC">
+                <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
+              </div>
+              <div class="col-rightC">
                 <p>Sept 2018</p>
+              </div>
+              <hr>
             </div>
-<hr>
+
             <!-- Certificate: 8 -->
-            <div class="col-leftC">
+            <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">Web Development Foundations: Full-Stack vs Front-End</h4>
-            </div>
-            <div class="col-midC">
-              <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
-          </div>
-            <div class="col-rightC">
+              </div>
+              <div class="col-midC">
+                <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
+              </div>
+              <div class="col-rightC">
                 <p>Sept 2018</p>
+              </div>
+              <hr>
             </div>
-<hr>
+
             <!-- Certificate: 7 -->
-            <div class="col-leftC">
+            <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">Gamification of Learning</h4>
-            </div>
-            <div class="col-midC">
-            <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
-            </div>
-            <div class="col-rightC">
+              </div>
+              <div class="col-midC">
+                <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
+              </div>
+              <div class="col-rightC">
                 <p>May 2018</p>
+              </div>
+              <hr>
             </div>
-<hr>
+
             <!-- Certificate: 6 -->
-            <div class="col-leftC">
+            <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">Articulate: Visual Design Basics</h4>
-            </div>
-            <div class="col-midC">
-              <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
               </div>
-            <div class="col-rightC">
+              <div class="col-midC">
+                <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
+              </div>
+              <div class="col-rightC">
                 <p>Mar 2018</p>
+              </div>
+              <hr>
             </div>
-<hr>
+
             <!-- Certificate: 5 -->
-            <div class="col-leftC">
+              <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">Learning Articulate Storyline 360</h4>
-            </div>
-            <div class="col-midC">
+              </div>
+              <div class="col-midC">
               <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
               </div>
-            <div class="col-rightC">
+              <div class="col-rightC">
                 <p>Mar 2018</p>
+              </div>
+              <hr>
             </div>
-<hr>
+
             <!-- Certificate: 4 -->
-            <div class="col-leftC">
+            <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">UX Design: 1 Overview</h4>
-            </div>
-            <div class="col-midC">
+              </div>
+              <div class="col-midC">
               <p><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</p>
               </div>
-            <div class="col-rightC">
+              <div class="col-rightC">
                 <p>Mar 2018</p>
+              </div>
+              <hr>
             </div>
-<hr>
+
             <!-- Certificate: 3 -->
-            <div class="col-leftC">
+            <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">Professional Scrum Master I</h4>
-            </div>
-            <div class="col-midC">
-              <p><img class="logo-img" src="https://media.licdn.com/dms/image/C560BAQFzF6WZjNSHkQ/company-logo_400_400/0?e=1549497600&v=beta&t=95WY845fmBsQvSi80IIORg28o1XhU3aCVTNCiwq7l1o" alt="Scrum.org"> Scrum.org</p>
-          </div>
-            <div class="col-rightC">
+              </div>
+              <div class="col-midC">
+                <p><img class="logo-img" src="https://media.licdn.com/dms/image/C560BAQFzF6WZjNSHkQ/company-logo_400_400/0?e=1549497600&v=beta&t=95WY845fmBsQvSi80IIORg28o1XhU3aCVTNCiwq7l1o" alt="Scrum.org"> Scrum.org</p>
+              </div>
+              <div class="col-rightC">
                 <p>Feb 2018</p>
+              </div>
+              <hr>
             </div>
-<hr>
+
             <!-- Certificate: 2 -->
-            <div class="col-leftC">
+            <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">Scrum Awareness</h4>
-            </div>
-            <div class="col-midC">
-              <p> <a href="https://mplaza.pm/online-courses/professional-scrum-master/"> Management Plaza</a></p>
-          </div>
-            <div class="col-rightC">
+              </div>
+              <div class="col-midC">
+                <p> <a href="https://mplaza.pm/online-courses/professional-scrum-master/"> Management Plaza</a></p>
+              </div>
+              <div class="col-rightC">
                 <p>Feb 2018</p>
+              </div>
+              <hr>
             </div>
-<hr>
+
             <!-- Certificate: 1 -->
-            <div class="col-leftC">
+            <div>
+              <div class="col-leftC">
                 <h4 class="cert_h4">Manager as Coach</h4>
-            </div>
-            <div class="col-midC">
-              <p><img class="logo-img" src="https://erickson.edu/sites/all/themes/eci/logo.png" alt="Management Plaza"> Erickson College International</p>
-          </div>
-            <div class="col-rightC">
+              </div>
+              <div class="col-midC">
+                <p><img class="logo-img" src="https://erickson.edu/sites/all/themes/eci/logo.png" alt="Management Plaza"> Erickson College International</p>
+              </div>
+              <div class="col-rightC">
                 <p>Feb 2018</p>
+              </div>
+              <hr>
             </div>
-
-
-            </div> <!-- close content-wrap div -->
-            </section>
+          </div> <!-- close content-wrap div -->
+        </section>
     </main>
 
     <!-- // Footer & contact info -->
